domains/src/infrastructures/scraper/snapshots/domains__infrastructures__scraper__ebook_snapshot__tests__get-2.snap
---
source: domains/src/infrastructures/scraper/ebook_snapshot.rs
expression: actual.payment_real
---
Some(
    Payment {
        price: "3520",
        points: "106",
    },
)
