domains/src/infrastructures/scraper/snapshots/domains__infrastructures__scraper__ebook_snapshot__tests__get.snap
---
source: domains/src/infrastructures/scraper/ebook_snapshot.rs
expression: actual.payment_ebook
---
Some(
    Payment {
        price: "3,344",
        points: "152",
    },
)
